edited the collaborator

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
    <head>
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Fountain Chatbot : Welcome</title>
+      <title>Fountain University Chatbot : Welcome</title>
+      <link rel="stylesheet" href="index.css">
       <meta name="description" content="Fountain University Chatbot ">
    </head>
    <body>
