included image nd style

--- a/index.html
+++ b/index.html
@@ -8,6 +8,29 @@
       <meta name="description" content="Fountain University Chatbot ">
    </head>
    <body>
-      
+      <div class="all-bg">
+         <div>
+            <h1>Chat with Fountain Bot</h1>
+         </div>
+
+         <div class="chat-box">
+            <div class="message-box">
+               <div class="bot-message-box">
+                  <p>
+                     Hello, Welcome. This is Fountain Bot, How can i help about 
+                     you?
+                  </p>
+               </div>
+               <div class="user-message-box">
+                  <p>
+                     I need to know more about the school and it's admission.
+                  </p>
+               </div>
+            </div>
+            <div class="type-box">
+               
+            </div>
+         </div>
+      </div>
    </body>
 </html>
