--- a/index.html
+++ b/index.html
@@ -4,20 +4,40 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Fountain University Chatbot : Welcome</title>
-      <link rel="stylesheet" href="index.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
       <meta name="description" content="Fountain University Chatbot ">
+      <link rel="icon" href="assets/images/site-icon.png">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Julee&family=Lumanosimo&family=Merienda:wght@300..900&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="index.css">
+
    </head>
    <body>
       <div class="all-bg">
-         <div>
-            <h1>Chat with Fountain Bot</h1>
+
+         <div class="header">
+            <!-- <div class="head-box">
+               <div class="img-box">
+                  <img src="assets/images/logo.jpg" alt="">
+               </div>
+            </div> -->
+
+            <div class="intro">
+               <h1>
+                  Chat with FUO BOT
+               </h1>
+               <p>
+                  Simple as your question regarding Fountain University
+               </p>
+            </div>
          </div>
 
          <div class="chat-box">
-            <div class="message-box">
+            <div class="message-box" id="message-box">
                <div class="bot-message-box">
                   <p>
-                     Hello, Welcome. This is Fountain Bot, How can i help about 
+                     Hello, Welcome. This is FUO Bot, How can i help about 
                      you?
                   </p>
                </div>
@@ -26,11 +46,57 @@
                      I need to know more about the school and it's admission.
                   </p>
                </div>
+               <div class="bot-message-box">
+                  <p>
+                     Hello, Welcome. This is Fountain Bot, How can i help about 
+                     you? iaeuhsdh hausdu huahsuh uahuh uhasuh uhauh 
+                     diasuh uhsuh uahu huahu auh uhasuasdifihu huashu h
+                     adsuh uhauhu huahuh uhuhuashu huahdu huadsh
+                     adshufh udhashuh uahu
+                  </p>                
+                  <p>
+                     Hello, Welcome. This is Fountain Bot, How can i help about 
+                     you? iaeuhsdh hausdu huahsuh uahuh uhasuh uhauh 
+                     diasuh uhsuh uahu huahu auh uhasuasdifihu huashu h
+                     adsuh uhauhu huahuh uhuhuashu huahdu huadsh
+                     adshufh udhashuh uahu
+                  </p>                  
+                  <p>
+                     Hello, Welcome. This is Fountain Bot, How can i help about 
+                     you? iaeuhsdh hausdu huahsuh uahuh uhasuh uhauh 
+                     diasuh uhsuh uahu huahu auh uhasuasdifihu huashu h
+                     adsuh uhauhu huahuh uhuhuashu huahdu huadsh
+                     adshufh udhashuh uahu
+                  </p>                  
+                  <p>
+                     Hello, Welcome. This is Fountain Bot, How can i help about 
+                     you? iaeuhsdh hausdu huahsuh uahuh uhasuh uhauh 
+                     diasuh uhsuh uahu huahu auh uhasuasdifihu huashu h
+                     adsuh uhauhu huahuh uhuhuashu huahdu huadsh
+                     adshufh udhashuh uahu
+                  </p>                  
+                  <p>
+                     Hello, Welcome. This is Fountain Bot, How can i help about 
+                     you? iaeuhsdh hausdu huahsuh uahuh uhasuh uhauh 
+                     diasuh uhsuh uahu huahu auh uhasuasdifihu huashu h
+                     adsuh uhauhu huahuh uhuhuashu huahdu huadsh
+                     adshufh udhashuh uahu
+                  </p>                  
+               </div>
+               <div class="user-message-box">
+                  <p>
+                     I need to know more about
+                  </p>
+               </div>
             </div>
             <div class="type-box">
-               
+               <textarea autofocus placeholder="Ask your Question" id="question"></textarea>
+               <i class="fa fa-paper-plane" id="send_message"></i>
             </div>
          </div>
       </div>
+
+
+      <script src="index.js"></script>
    </body>
 </html>
