--- a/index.html
+++ b/index.html
@@ -49,39 +49,8 @@
                <div class="bot-message-box">
                   <p>
                      Hello, Welcome. This is Fountain Bot, How can i help about 
-                     you? iaeuhsdh hausdu huahsuh uahuh uhasuh uhauh 
-                     diasuh uhsuh uahu huahu auh uhasuasdifihu huashu h
-                     adsuh uhauhu huahuh uhuhuashu huahdu huadsh
-                     adshufh udhashuh uahu
-                  </p>                
-                  <p>
-                     Hello, Welcome. This is Fountain Bot, How can i help about 
-                     you? iaeuhsdh hausdu huahsuh uahuh uhasuh uhauh 
-                     diasuh uhsuh uahu huahu auh uhasuasdifihu huashu h
-                     adsuh uhauhu huahuh uhuhuashu huahdu huadsh
-                     adshufh udhashuh uahu
-                  </p>                  
-                  <p>
-                     Hello, Welcome. This is Fountain Bot, How can i help about 
-                     you? iaeuhsdh hausdu huahsuh uahuh uhasuh uhauh 
-                     diasuh uhsuh uahu huahu auh uhasuasdifihu huashu h
-                     adsuh uhauhu huahuh uhuhuashu huahdu huadsh
-                     adshufh udhashuh uahu
-                  </p>                  
-                  <p>
-                     Hello, Welcome. This is Fountain Bot, How can i help about 
-                     you? iaeuhsdh hausdu huahsuh uahuh uhasuh uhauh 
-                     diasuh uhsuh uahu huahu auh uhasuasdifihu huashu h
-                     adsuh uhauhu huahuh uhuhuashu huahdu huadsh
-                     adshufh udhashuh uahu
-                  </p>                  
-                  <p>
-                     Hello, Welcome. This is Fountain Bot, How can i help about 
-                     you? iaeuhsdh hausdu huahsuh uahuh uhasuh uhauh 
-                     diasuh uhsuh uahu huahu auh uhasuasdifihu huashu h
-                     adsuh uhauhu huahuh uhuhuashu huahdu huadsh
-                     adshufh udhashuh uahu
-                  </p>                  
+                     you? 
+                  </p>               
                </div>
                <div class="user-message-box">
                   <p>
