--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <title>Fountain University Chatbot : Welcome</title>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
       <meta name="description" content="Fountain University Chatbot ">
-      <link rel="icon" href="assets/images/site-icon.png">
+      <link rel="icon" type="image" href="assets/images/site-icon.png">
       <link rel="preconnect" href="https://fonts.googleapis.com">
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Julee&family=Lumanosimo&family=Merienda:wght@300..900&display=swap" rel="stylesheet">
