updated the bot message

--- a/index.html
+++ b/index.html
@@ -57,6 +57,11 @@
                      I need to know more about
                   </p>
                </div>
+               <div class="user-message-box">
+                  <p>
+                     I need to know more about
+                  </p>
+               </div>
             </div>
             <div class="type-box">
                <textarea autofocus placeholder="Ask your Question" id="question"></textarea>
